Logo is fixed, Header padding is added, Font-family is added for h2, Read more is link now without div, Padding is added for news section

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -6,18 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework-module-4</title>
   <link rel="stylesheet" href="./css/normalize.css" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./css/style.css" />
-
 </head>
 
 <body>
   <header class="container">
     <nav class="clearfix">
-      <div class="logo">
-        Mart
-      </div>
+      <a href="#" class=" logo"> Mart </a>
       <ul class="menu">
         <li class="menu-item"><a href="#" class="menu-link-item">Home</a></li>
         <li class="menu-item">
@@ -34,8 +31,8 @@
   </header>
 
   <main class="container">
-    <h2 class="title-featured-products">Featured products</h2>
     <section class="features">
+      <h2 class="title-featured-products">Featured products</h2>
       <ul class="features-wrapper clearfix">
         <li class="featured-products-item">
           <a href="#" class="goods-link">
@@ -120,12 +117,11 @@
             Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea
           </h3>
           <p class="news-text">
-            Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-            accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare
+            Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+            Nam nec tellus a odio tincidunt auctor a ornare
           </p>
-          <div class="read-more">
-            <a href="#" class="internal-link">Read more</a>
-          </div>
+          <a href="#" class="internal-link">Read more</a>
         </li>
         <li class="news">
           <img src="./img/girls.png" alt="girls" width="347" height="261" />
@@ -133,12 +129,11 @@
             Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea
           </h3>
           <p class="news-text">
-            Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-            accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare
+            Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+            Nam nec tellus a odio tincidunt auctor a ornare
           </p>
-          <div class="read-more">
-            <a href="#" class="internal-link">Read more</a>
-          </div>
+          <a href="#" class="internal-link">Read more</a>
         </li>
         <li class="news">
           <img src="./img/bus.png" alt="bus" width="347" height="262" />
@@ -146,12 +141,11 @@
             Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea
           </h3>
           <p class="news-text">
-            Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
-            accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare
+            Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+            Nam nec tellus a odio tincidunt auctor a ornare
           </p>
-          <div class="read-more">
-            <a href="#" class="internal-link">Read more</a>
-          </div>
+          <a href="#" class="internal-link">Read more</a>
         </li>
       </ul>
     </section>
